added base href = '/'

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Network Visualization and Network Algorithms"
     />
+    <meta name = "color-scheme" content ="light dark"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <base href = "/">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
